# qt_conan_template

./: CMakeLists.txt  README.md  configure_conan.cmake  configure_linux_default.sh  main.cpp
conan/: conan_profile_linux_debug.txt  conan_profile_linux_release.txt
resources/: stylesheet.qss
