cmake_minimum_required(VERSION 3.5.17)

project(qt_conan_template VERSION 0.1 LANGUAGES CXX)

set(CMAKE_INCLUDE_CURRENT_DIR ON)

set(CMAKE_AUTOUIC ON)
set(CMAKE_AUTOUIC_SEARCH_PATHS ui/)
set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTORCC ON)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

set(PROJECT_BINARY_OUTPUT ${CMAKE_BINARY_DIR}/bin)
set(PROJECT_LIBRARY_OUTPUT ${CMAKE_BINARY_DIR}/lib)

include(${CMAKE_SOURCE_DIR}/configure_conan.cmake)

find_package(Qt6 REQUIRED COMPONENTS Widgets Gui)

set(PROJECT_SOURCES
	main.cpp
	resources/resources.qrc
)

add_executable(qt_conan_template
    ${PROJECT_SOURCES}
)

target_link_libraries(qt_conan_template PRIVATE Qt6::Core Qt6::Widgets Qt6::Gui)

set_target_properties(qt_conan_template
    PROPERTIES
    ARCHIVE_OUTPUT_DIRECTORY "${PROJECT_LIBRARY_OUTPUT}"
    LIBRARY_OUTPUT_DIRECTORY "${PROJECT_LIBRARY_OUTPUT}"
    RUNTIME_OUTPUT_DIRECTORY_DEBUG "${PROJECT_BINARY_OUTPUT}"
    RUNTIME_OUTPUT_DIRECTORY_RELEASE "${PROJECT_BINARY_OUTPUT}"
)
